bootstrap/argo-cd/overlays/prd/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
  - "argocd.diegoluisi.eti.br"
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.lgsk8sp1.grupologos.local
        port:
          number: 80
