bootstrap/argo-cd/overlays/prd/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
  - "argocd.diegoluisi.eti.br"
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 80
